--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@
 }
 
 .text-input {
+  width: 100%;
   height: 45px;
   padding-left: 0.5em;
 }
@@ -143,6 +144,92 @@
   border-color: red;
 }
 
+.amount-container {
+  margin-bottom: 1.2em;
+}
+
+.predefined-amount-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.manual-amount-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.manual-amount {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+
+/* CUSTOM RADIO STYLE */
+.radio-container {
+  display: block;
+  position: relative;
+  padding-left: 2em;
+  margin-bottom: 1.3em;
+  cursor: pointer;
+  font-size: 1.2em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.radio-container-manual-amount {
+  margin-bottom: 2.3em;
+}
+
+
+.radio-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+.radio-container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+.radio-container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.radio-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.radio-container .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
 
 /* MEDIA QUERRY */
 
