--- a/style.css
+++ b/style.css
@@ -84,12 +84,30 @@
     padding: 50px;
 }
 
+.logo-amount-row {
+  display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
 .form-logo {
   display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 40%;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex: 1;
+}
+
+.payment-data-row {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.payment-data-fields-container {
+  display: flex;
+  flex-direction: column;
+  flex: 0.6;
 }
 
 .date-cvv {
@@ -102,7 +120,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 60%;
+  width: 100%;
   height: 100%;
 }
 
@@ -146,6 +164,7 @@
 
 .amount-container {
   margin-bottom: 1.2em;
+  flex: 1.5;
 }
 
 .predefined-amount-row{
