--- a/style.css
+++ b/style.css
@@ -70,25 +70,24 @@
 }
 
 /* FORM STYLE */
-
 .from-section {
   margin-bottom: 1em;
 }
 
 .method-container {
   width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    background: whitesmoke;
-    padding: 50px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  background: whitesmoke;
+  padding: 50px;
 }
 
 .logo-amount-row {
   display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .form-logo {
@@ -167,7 +166,7 @@
   flex: 1.5;
 }
 
-.predefined-amount-row{
+.predefined-amount-row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -188,7 +187,7 @@
 }
 
 
-/* CUSTOM RADIO STYLE */
+/* [BEGIN] CUSTOM RADIO */
 .radio-container {
   display: block;
   position: relative;
@@ -223,11 +222,11 @@
   border-radius: 50%;
 }
 
-.radio-container:hover input ~ .checkmark {
+.radio-container:hover input~.checkmark {
   background-color: #ccc;
 }
 
-.radio-container input:checked ~ .checkmark {
+.radio-container input:checked~.checkmark {
   background-color: #2196F3;
 }
 
@@ -237,21 +236,165 @@
   display: none;
 }
 
-.radio-container input:checked ~ .checkmark:after {
+.radio-container input:checked~.checkmark:after {
   display: block;
 }
 
 .radio-container .checkmark:after {
- 	top: 9px;
-	left: 9px;
-	width: 8px;
-	height: 8px;
-	border-radius: 50%;
-	background: white;
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+
+/* [END] CUSTOM RADIO */
+
+.submit-row {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0.8em 0 0.8em 0;
+}
+
+.submit-container {
+  display: flex;
+  flex-direction: column;
+  flex: 0.6;
+  align-items: center;
+}
+
+.submit-button {
+  height: 45px;
+  width: 100%;
+}
+
+.cancel-link {}
+
+.cards-brands {
+  width: 80%;
+}
+
+.pci-logo-wrapper {
+  text-align: center;
+}
+
+.pci-logo {
+  width: 20%;
+}
+
+.add-new {
+  display: flex;
+  align-items: center;
+}
+
+.text-new {
+  margin-left: 1em;
+  text-decoration: underline;
+}
+
+/* [BEGIN] CUSTOM SELECT ELEMENT */
+.select {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100;
+  height: 45px;
+}
+
+.option {
+  padding-left: 1em;
+  min-height: 45px;
+  display: flex;
+  align-items: center;
+  background: #E5E5E5;
+  border-top: #222 solid 1px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  pointer-events: none;
+  order: 2;
+  z-index: 1;
+  transition: background .4s ease-in-out;
+  box-sizing: border-box;
+  overflow: hidden;
+  white-space: nowrap;
+
+}
+
+.option:hover {
+  background: #FF595C;
+}
+
+.select:focus .option {
+  position: relative;
+  pointer-events: all;
+}
+
+.option-input {
+  opacity: 0;
+  position: absolute;
+  left: -99999px;
+}
+
+.option-input:checked+label {
+  order: 1;
+  z-index: 2;
+  background: #FF595C;
+  border-top: none;
+  position: relative;
+  color: white;
+  padding-left: 3em;
+}
+
+.option-content-conteiner {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.delete-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 45px;
+}
+
+/* [BEGIN] SELECT ARROW */
+.option-input:checked+label:after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid white;
+  position: absolute;
+  left: 10px;
+  top: calc(50% - 2.5px);
+  pointer-events: none;
+  z-index: 3;
+}
+
+.option-input:checked+label:before {
+  position: absolute;
+  left: 0;
+  height: 45px;
+  width: 30px;
+  content: '';
+  background: #050505;
+}
+
+/* [END] SELECT ARROW */
+/* [END] CUSTOM SELECT ELEMENT */
+
+/* MARGINS */
+.mb-8em {
+  margin-bottom: 0.8em;
 }
 
 /* MEDIA QUERRY */
-
 /* MAX 600px */
 @media only screen and (max-width: 600px) {
   .card {
