--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@
   pointer-events: none;
   order: 2;
   z-index: 1;
-  transition: background .4s ease-in-out;
+  transition: background .2s ease-in-out;
   box-sizing: border-box;
   overflow: hidden;
   white-space: nowrap;
@@ -323,7 +323,7 @@
 }
 
 .option:hover {
-  background: #FF595C;
+  background: white;
 }
 
 .select:focus .option {
@@ -340,10 +340,10 @@
 .option-input:checked+label {
   order: 1;
   z-index: 2;
-  background: #FF595C;
+  background: white;
   border-top: none;
   position: relative;
-  color: white;
+  color: black;
   padding-left: 3em;
 }
 
@@ -360,6 +360,11 @@
   align-items: center;
   width: 40px;
   height: 45px;
+  z-index: 9999;
+}
+
+.delete-icon:hover {
+  cursor: pointer;
 }
 
 /* [BEGIN] SELECT ARROW */
