--- a/style.css
+++ b/style.css
@@ -44,13 +44,14 @@
 }
 
 .card img {
-  width: 60%;
+  width: 55%;
+  margin: 1em;
 }
 
 .card-small {
   height: 60%;
   margin: 5px;
-  transition: all .2s ease-in-out;
+  transition: all .1s ease-in-out;
 }
 
 .card-small p {
@@ -411,11 +412,12 @@
   }
 
   .card-small {
-    height: 60%;
+    height: 55%;
   }
 
   .card-small img {
-    width: 50px;
+    width: 60%;
+    margin: 1em;
   }
 
   .card:hover {
