--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
+@font-face {
+  font-family: 'NunitoSans' !important;
+  src: url('/fonts/NunitoSans-Regular/NunitoSans-Regular.eot');
+  src: url('/fonts/NunitoSans-Regular/NunitoSans-Regular.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/NunitoSans-Regular/NunitoSans-Regular.woff') format('woff'),
+    url('/fonts/NunitoSans-Regular/NunitoSans-Regular.ttf') format('truetype'),
+    url('/fonts/NunitoSans-Regular/NunitoSans-Regular.svg') format('svg')
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+html {
+  font-family: NunitoSans, sans-serif;
 }
 
 .container {
@@ -133,10 +146,18 @@
   width: 100%;
   height: 45px;
   padding-left: 0.5em;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  color: rgba(72, 80, 109, 0.68);
+  border: solid 1px rgba(37, 39, 60, 0.28);
+  border-radius: 4px;
 }
 
 .input-label {
   margin-bottom: 0.5em;
+  letter-spacing: 1px;
+  font-size: 14px;
 }
 
 .error {
@@ -267,6 +288,9 @@
 .submit-button {
   height: 45px;
   width: 100%;
+  border-radius: 2px;
+  border: 0;
+  font-size: 14px;
   background-image: linear-gradient(79deg, #eb595c, #ea5293)
 }
 
