--- a/style.css
+++ b/style.css
@@ -294,6 +294,73 @@ html {
 
 /* [END] CUSTOM RADIO */
 
+
+/* [BEGIN] CUSTOM CHECKBOX */
+
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  padding-top: 4px;
+  margin: 1em 0 1em 0;
+  cursor: pointer;
+  font-size: 1em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.checkbox-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkbox-mark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: white;
+  border-radius: 2px;
+}
+
+.checkbox-container:hover input~.checkbox-mark {
+  background-color: #ccc;
+}
+
+.checkbox-container input:checked~.checkbox-mark {
+  background-color: #eb595c;
+}
+
+.checkbox-mark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkbox-container input:checked~.checkbox-mark:after {
+  display: block;
+}
+
+.checkbox-container .checkbox-mark:after {
+  left: 10px;
+  top: 7px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/* [END] CUSTOM CHECKBOX */
+
 .submit-row {
   display: flex;
   justify-content: flex-end;
