--- a/style.css
+++ b/style.css
@@ -413,6 +413,11 @@ html {
 }
 
 /* [BEGIN] CUSTOM SELECT ELEMENT */
+
+.select-wrapper {
+  width: 60%;
+}
+
 .select {
   display: flex;
   flex-direction: column;
@@ -460,14 +465,12 @@ html {
   order: 1;
   z-index: 2;
   background: white;
-  background-image: linear-gradient(79deg, #eb595c, #ea5293);
   border-top: none;
   position: relative;
-  color: black;
   padding-left: 3em;
 }
 
-.option-content-conteiner {
+.option-content-container {
   width: 100%;
   display: flex;
   align-items: center;
@@ -508,7 +511,7 @@ html {
   height: 45px;
   width: 30px;
   content: '';
-  background: #050505;
+  background: #eb595c;
 }
 
 /* [END] SELECT ARROW */
