--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ html {
 }
 
 .card-small {
-  height: 75px !important; 
+  height: 75px !important;
   margin: 5px;
   transition: all .1s ease-in-out;
 }
@@ -88,6 +88,7 @@ html {
 
 .card-small img {
   width: 100%;
+  min-width: 20px;
   max-width: 64px;
   height: auto;
 }
@@ -590,7 +591,7 @@ html {
 
   .card-small {
     height: 60px !important;
-}
+  }
 
 }
 
